# GameEngine

./: .gitignore  CMakeLists.txt  a.out.data  env.bat
Shaders/GUI/: FragShader.txt  VertShader.txt
Shaders/Light/: FragShader.txt  VertShader.txt
resources/Shaders/Default/: FragShader.txt  VertShader.txt
resources/Shaders/GUI/: FragShader.txt  VertShader.txt
resources/Shaders/Light/: FragShader.txt
src/: stb_vorbis.c
src/GameEngine/: Audio.cpp  Audio.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Cat.cpp  Cat.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Enviroment.cpp  Enviroment.h  GameEngine.h  Gui.cpp  Gui.h  Input.cpp  Input.h  KCollider.cpp  KCollider.h  KRigidBody.cpp  KRigidBody.h  MeshCollider.cpp  MeshCollider.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  NativeWindow.cpp  NativeWindow.h  Physics.cpp  (+24 more)
src/Graphics/: Camera.cpp  Camera.h  Model.cpp  Model.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h  bugl.h  rend.h
src/demo/: Block.cpp  Block.h  FloorPrefab.cpp  FloorPrefab.h  GameManager.cpp  GameManager.h  Laser.cpp  Laser.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Skybox.cpp  Skybox.h  main.cpp
